--- a/etapa2-emulador-dispositivo/Config.json
+++ b/etapa2-emulador-dispositivo/Config.json
@@ -1,8 +1,9 @@
 {
-  "devaddr": "26011CFF",
-  "nwkskey": "A1B2C3D4E5F60718293A4B5C6D7E8F90",
-  "appskey": "102030405060708090A0B0C0D0E0F000",
-  "fcnt": 5,
+  "deveui": "70B3D57ED0070356",
+  "devaddr": "260C00D1",
+  "nwkskey": "62F55BB83188BD297AA3861896050288",
+  "appskey": "17437230CD7F11EEC2BBA6E12E93E2F2",
+  "fcnt": 7,
   "fport": 10,
   "payload": [99, 123]
 }
