--- a/etapa2-emulador-dispositivo/Makefile
+++ b/etapa2-emulador-dispositivo/Makefile
@@ -1,21 +1,34 @@
+# Nome do alvo final
 TARGET = Main.exe
 
-SRC = main.c lorawan.c aes_cmac.c config.c
+# Arquivos fonte
+SRC = Main.c lorawan.c aes_cmac.c Config.c
 
-CC = /c/msys64/mingw64/bin/gcc.exe
+# Caminho do compilador GCC
+CC = /usr/bin/gcc
 
+# Flags de compilação
 CFLAGS = -fdiagnostics-color=always -g
 
-INCLUDES = -I/c/msys64/mingw64/include
+# Diretórios de inclusão para cabeçalhos (diretórios onde o compilador busca os arquivos .h)
+INCLUDES = -I$(shell pwd) -I/usr/include
 
-LDFLAGS = -L/c/msys64/mingw64/lib
+# Diretórios de linkedição (onde o linker busca as bibliotecas .so ou .a)
+# Caminho para as bibliotecas mbedtls
+LDFLAGS = -L/usr/lib/x86_64-linux-gnu
 
-LIBS = -lmbedtls -lmbedcrypto -lmbedx509 -lcurl -lcjson -lws2_32
 
+# Bibliotecas para linkedição
+LIBS = -lmbedtls -lmbedcrypto -lmbedx509 -lcurl -lcjson
+
+
+# Regra padrão para compilar o programa
 all: $(TARGET)
 
+# Como criar o executável a partir dos arquivos fonte
 $(TARGET): $(SRC)
 	$(CC) $(CFLAGS) $(INCLUDES) $(SRC) -o $(TARGET) $(LDFLAGS) $(LIBS)
 
+# Limpeza dos arquivos gerados (executáveis e objetos)
 clean:
 	rm -f $(TARGET)
