Apagando comentários e ajustando

--- a/etapa2-emulador-dispositivo/Config.json
+++ b/etapa2-emulador-dispositivo/Config.json
@@ -1,5 +1,5 @@
 {
-	"deveui":	"@\u0003",
+	"deveui":	"70B3D57ED007035A",
 	"devaddr":	"260CECBA",
 	"nwkskey":	"A8811AA4AF7702185FC3ABD07FF3C3CD",
 	"appskey":	"ED3FD17362220C5B95C867AC42C2CB29",
