--- a/etapa2-emulador-dispositivo/Config.json
+++ b/etapa2-emulador-dispositivo/Config.json
@@ -1,9 +1,9 @@
 {
-	"deveui":	"70B3D57ED007035A",
+	"deveui":	"@\u0003",
 	"devaddr":	"260CECBA",
 	"nwkskey":	"A8811AA4AF7702185FC3ABD07FF3C3CD",
 	"appskey":	"ED3FD17362220C5B95C867AC42C2CB29",
-	"fcnt":	4,
+	"fcnt":	5,
 	"fport":	10,
 	"payload":	[99, 123]
 }
