--- a/.gitignore
+++ b/.gitignore
@@ -51,6 +51,9 @@ Module.symvers
 Mkfile.old
 dkms.conf
 
-# Exceção para incluir a biblioteca mbedtls & cJSON
+# Exceção para incluir a biblioteca mbedtls
 !etapa2-emulador-dispositivo/mbedtls/
+
+# Exceção para incluir o diretório cJSON
 !cJSON/
+!cJSON/**
