--- a/etapa3-gateway-udp/Config.json
+++ b/etapa3-gateway-udp/Config.json
@@ -4,6 +4,8 @@
 	"nwkskey":	"A8811AA4AF7702185FC3ABD07FF3C3CD",
 	"appskey":	"ED3FD17362220C5B95C867AC42C2CB29",
 	"fcnt":	14,
+	"device_id":	"lorawan-simu1",
+	"application_id":	"lorawan-unifei",
 	"fport":	10,
 	"payload":	[99, 123]
 }
