--- a/Final/config/Config.json
+++ b/Final/config/Config.json
@@ -1,11 +1,24 @@
 {
-	"device_id":	"lorawan-simu1",
-	"application_id":	"lorawan-unifei",
-	"deveui":	"70B3D57ED007035A",
-	"devaddr":	"260CECBA",
-	"nwkskey":	"A8811AA4AF7702185FC3ABD07FF3C3CD",
-	"appskey":	"ED3FD17362220C5B95C867AC42C2CB29",
-	"fcnt":	18,
-	"fport":	10,
-	"payload":	[99, 123]
+	"devices":	[{
+			"device_id":	"lorawan-simu1",
+			"application_id":	"lorawan-unifei",
+			"deveui":	"70B3D57ED007035A",
+			"devaddr":	"260CECBA",
+			"nwkskey":	"A8811AA4AF7702185FC3ABD07FF3C3CD",
+			"appskey":	"ED3FD17362220C5B95C867AC42C2CB29",
+			"fcnt":	0,
+			"fport":	10,
+			"payload":	[55, 87]
+		}, {
+			"device_id":	"lorawan-simu2",
+			"application_id":	"lorawan-unifei",
+			"deveui":	"70B3D57ED0070507",
+			"devaddr":	"260CF6CF",
+			"nwkskey":	"388F49FB1FD9507358CFD6B102D3A627",
+			"appskey":	"F125B998CB5E21F5D083B9A2FB8B0F66",
+			"fcnt":	0,
+			"fport":	15,
+			"payload":	[64, 82]
+		}
+	]
 }
