--- a/etapa5-integração-em-rede+envio-para-o-TTN/config/Config.json
+++ b/etapa5-integração-em-rede+envio-para-o-TTN/config/Config.json
@@ -8,7 +8,12 @@
 			"appskey":	"ED3FD17362220C5B95C867AC42C2CB29",
 			"fcnt":	0,
 			"fport":	10,
-			"payload":	[55, 87]
+			"payload":	[55, 87],
+			"server":	"router.us.thethings.network",
+			"port":	1700,
+			"gateway_id":	"unifei-lorawan-simulador-victor-3",
+			"gateway_eui":	"70B3D57E5D9E7B42",
+			"ws_url":	"wss://us1.cloud.thethings.network:8887"
 		}, {
 			"device_id":	"lorawan-simu2",
 			"application_id":	"lorawan-unifei",
@@ -18,6 +23,11 @@
 			"appskey":	"F125B998CB5E21F5D083B9A2FB8B0F66",
 			"fcnt":	0,
 			"fport":	15,
-			"payload":	[64, 82]
+			"payload":	[64, 82],
+			"server":	"router.us.thethings.network",
+			"port":	1700,
+			"gateway_id":	"unifei-lorawan-simulador-victor-3",
+			"gateway_eui":	"70B3D57E5D9E7B42",
+			"ws_url":	"wss://us1.cloud.thethings.network:8887"
 		}]
 }
