--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,4 @@ dkms.conf
 
 # Exceção para incluir a biblioteca mbedtls
 !etapa2-emulador-dispositivo/mbedtls/
+!etapa5-integração-em-rede+envio-para-o-TTN/mbedtls/**
