Limpeza de comentários & identação de código.

--- a/etapa1-curl-tago/Makefile
+++ b/etapa1-curl-tago/Makefile
@@ -1,29 +1,20 @@
-# Nome do executável
 TARGET = Main.exe
 
-# Arquivos fonte
 SRC = Main.c
 
-# Compilador
-CC = /c/msys64/mingw64/bin/gcc.exe
+CC = /usr/bin/gcc
 
-# Flags de compilação
 CFLAGS = -fdiagnostics-color=always -g
 
-# Diretórios de inclusão e bibliotecas
 INCLUDES = -I/c/msys64/mingw64/include
 LDFLAGS = -L/c/msys64/mingw64/lib
 
-# Bibliotecas para linkagem
 LIBS = -lcurl
 
-# Regra padrão
 all: $(TARGET)
 
-# Regra de compilação
 $(TARGET): $(SRC)
 	$(CC) $(CFLAGS) $(INCLUDES) $(SRC) -o $(TARGET) $(LDFLAGS) $(LIBS)
 
-# Limpeza dos arquivos gerados
 clean:
 	rm -f $(TARGET)
