--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "C_Cpp.default.compilerPath": "C:/msys64/mingw64/bin/gcc.exe",
     "files.associations": {
         "stdio.h": "c",
-        "aes_cmac.h": "c"
+        "aes_cmac.h": "c",
+        "string.h": "c"
     }
 }
