Finalizando Programa Integrador

--- a/etapa4-integração-local/Makefile
+++ b/etapa4-integração-local/Makefile
@@ -1,4 +1,4 @@
-TARGETS = bin/Gateway.exe bin/Main.exe
+TARGETS = bin/Gateway.exe bin/Main.exe bin/Controlador.exe
 
 CC = /usr/bin/gcc
 
@@ -14,6 +14,7 @@ SRC_DIR = src
 BIN_DIR = bin
 
 GATEWAY_SRC = $(SRC_DIR)/Gateway.c
+CONTROLADOR_SRC = $(SRC_DIR)/Controlador.c
 MAIN_SRC = $(SRC_DIR)/Main.c $(SRC_DIR)/lorawan.c $(SRC_DIR)/aes_cmac.c $(SRC_DIR)/Config.c
 
 all: $(TARGETS)
@@ -23,6 +24,10 @@ bin/Gateway.exe: $(GATEWAY_SRC)
 	$(CC) $(CFLAGS) $(INCLUDES) $^ -o $@ $(LDFLAGS) $(LIBS)
 
 bin/Main.exe: $(MAIN_SRC)
+	mkdir -p $(BIN_DIR)
+	$(CC) $(CFLAGS) $(INCLUDES) $^ -o $@ $(LDFLAGS) $(LIBS)
+
+bin/Controlador.exe: $(CONTROLADOR_SRC)
 	mkdir -p $(BIN_DIR)
 	$(CC) $(CFLAGS) $(INCLUDES) $^ -o $@ $(LDFLAGS) $(LIBS)
 
