--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "files.associations": {
         "stdio.h": "c",
         "aes_cmac.h": "c",
-        "string.h": "c"
+        "string.h": "c",
+        "inet.h": "c"
     }
 }
