Ajustando Gateway e outras melhorias

--- a/etapa5-integração-TTN/Makefile
+++ b/etapa5-integração-TTN/Makefile
@@ -12,6 +12,7 @@ LIBS = -lmbedtls -lmbedcrypto -lmbedx509 -lcjson -lcurl
 
 SRC_DIR = src
 BIN_DIR = bin
+log_DIR = logs
 
 GATEWAY_SRC = $(SRC_DIR)/Gateway.c
 CONTROLADOR_SRC = $(SRC_DIR)/Controlador.c
@@ -20,16 +21,22 @@ MAIN_SRC = $(SRC_DIR)/Main.c $(SRC_DIR)/lorawan.c $(SRC_DIR)/aes_cmac.c $(SRC_DI
 all: $(TARGETS)
 
 bin/Gateway.exe: $(GATEWAY_SRC)
+	mkdir -p $(log_DIR)
 	mkdir -p $(BIN_DIR)
 	$(CC) $(CFLAGS) $(INCLUDES) $^ -o $@ $(LDFLAGS) $(LIBS)
 
 bin/Main.exe: $(MAIN_SRC)
+	mkdir -p $(log_DIR)
 	mkdir -p $(BIN_DIR)
 	$(CC) $(CFLAGS) $(INCLUDES) $^ -o $@ $(LDFLAGS) $(LIBS)
 
 bin/Controlador.exe: $(CONTROLADOR_SRC)
+	mkdir -p $(log_DIR)
 	mkdir -p $(BIN_DIR)
 	$(CC) $(CFLAGS) $(INCLUDES) $^ -o $@ $(LDFLAGS) $(LIBS)
 
 clean:
 	rm -rf $(BIN_DIR)
+
+clean2:
+	rm -rf $(log_DIR)
