--- a/etapa5-integração-TTN/config/Config.json
+++ b/etapa5-integração-TTN/config/Config.json
@@ -6,11 +6,12 @@
 			"devaddr":	"260C65E9",
 			"nwkskey":	"A46110F73D604CCE19CA981827227E35",
 			"appskey":	"92CA5FEF1A454F527708E49DFB32AFE0",
-			"fcnt":	2,
+			"fcnt":	5,
 			"fport":	10,
 			"payload":	[55, 87],
 			"gateway":	{
 				"id":	"gateway-lorawan-unifei-1209",
+				"eui":	null,
 				"freq":	903.9,
 				"chan":	1,
 				"rfch":	0,
@@ -26,11 +27,12 @@
 			"devaddr":	"260C392E",
 			"nwkskey":	"D75F89255F4BC3DFDC47160C9995F0F0",
 			"appskey":	"36996A54BCA69EBDA95EEB91D57499B0",
-			"fcnt":	2,
+			"fcnt":	5,
 			"fport":	15,
 			"payload":	[64, 82],
 			"gateway":	{
 				"id":	"gateway-lorawan-unifei-1209",
+				"eui":	null,
 				"freq":	903.9,
 				"chan":	1,
 				"rfch":	0,
